--- a/about-me.html
+++ b/about-me.html
@@ -88,7 +88,7 @@
       <section class="blogs">
         <div class="container">
           <p class="bold-font recent">Recent posts</p>
-          <div class="blog-container">
+          <div class="blog-container recent-blogs">
             <div class="blog blog-1">
               <img
                 src="images/blog-1.png"
