--- a/post-0.html
+++ b/post-0.html
@@ -84,9 +84,9 @@
       </section>
 
       <section class="blogs">
-        <div class="container">
+        <div class="container ">
           <p class="bold-font recent">Recent posts</p>
-          <div class="blog-container">
+          <div class="blog-container  recent-blogs">
             <div class="blog blog-1">
               <img
                 src="images/blog-1.png"
